[metadata]
name = cloudformation-utils
description = a Python library reading, writing and pre-processing cloudformation yaml stacks
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/NitorCreations/cloudformation-utils
author = Pasi Niemi
author_email = pasi.niemi@nitor.com,
license = Apache License, Version 2.0
license_file = LICENCE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: AWS
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls = 
    Documentation = https://github.com/NitorCreations/cloudformation-utils
    Source = https://github.com/NitorCreations/cloudformation-utils
    Tracker = https://github.com/NitorCreations/cloudformation-utils/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires = 
    pyyaml
python_requires = >=3.6
setup_requires =
    pytest-runner

[options.extras_require]
test =
    pytest>=4.6.5
    pytest-mock>=1.10.4
    pytest-cov>=2.7.1
    requests-mock>=1.6.0
    pytest-runner
    mock>=3.0.5
all =
    %(test)s
    
    
[bumpversion]
current_version = 0.0.2
commit = True
tag = True

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=cloudformation_utils
testpaths = tests

[bdist_wheel]
universal = 1

[bumpversion:file:setup.py]

